[package]
name = "pallet-cairo"
version = "0.1.0-dev"
description = "FRAME pallet to execute Cairo programs."
authors = ["Abdelhamid Bakhta <@abdelhamidbakhta>"]
homepage = "https://github.com/keep-starknet-strange/kaioshin"
edition = "2021"
license = "MIT"
publish = false
repository = "https://github.com/keep-starknet-strange/kaioshin"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
codec = { package = "parity-scale-codec", version = "3.0.0", default-features = false, features = [
	"derive",
] }
scale-info = { version = "2.1.1", default-features = false, features = [
	"derive",
] }
frame-benchmarking = { default-features = false, optional = true, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.37" }
frame-support = { default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.37" }
frame-system = { default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.37" }
log = "0.4.17"
poseidon = { default-features = false, git = "https://github.com/EvolveArt/poseidon-rs", branch = "feature/no-std-refractor", features = ["alloc"]}
starknet-crypto = { git = "https://github.com/tdelabro/starknet-rs.git", branch = "feature/manual-no-std-bigdecimal", default-features = false }
lazy_static = {version = "1.4.0", default-features = false}
# Cairo Virtual Machine
# TODO: wait for no-std support on official repo
cairo-vm = { git = "https://github.com/open-dust/cairo-rs", branch= "wasm32-support", default-features = false, features = ["alloc"] }
# Cairo compiler dependencies
# TODO: wait for no-std support

[dev-dependencies]
sp-core = { default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.37" }
sp-io = { default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.37" }
sp-runtime = { default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.37" }
pallet-randomness-collective-flip = { default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.37" }


[features]
default = ["std"]
std = [
  "codec/std",
  "frame-benchmarking?/std",
  "frame-support/std",
  "frame-system/std",
  "scale-info/std",
  "cairo-vm/std",
]
runtime-benchmarks = ["frame-benchmarking/runtime-benchmarks"]
try-runtime = ["frame-support/try-runtime"]
