[package]
name = "pallet-starknet"
version = "0.1.0-dev"
description = "FRAME pallet to execute Starknet contracts."
authors = ["Abdelhamid Bakhta <@abdelhamidbakhta>"]
homepage = "https://github.com/keep-starknet-strange/kaioshin"
edition = "2021"
license = "MIT"
publish = false
repository = "https://github.com/keep-starknet-strange/kaioshin"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
# Kaiohsin pallets
pallet-kaioshin-randomness = { workspace = true }
# Kaioshin primitives
kp-starknet = { workspace = true, default-features = false }
starknet-crypto = { workspace = true, default-features = false, features = [
  "alloc",
] }

# Substrate frame
frame-support = { workspace = true }
frame-system = { workspace = true }
frame-benchmarking = { workspace = true, optional = true }

# Substrate primitives
sp-core = { workspace = true }
sp-io = { workspace = true }
sp-std = { workspace = true }
sp-runtime = { workspace = true }

# Frame pallets

# Other third party dependencies
codec = { package = "parity-scale-codec", version = "3.0.0", default-features = false, features = [
  "derive",
] }
scale-info = { workspace = true }
log = { workspace = true }
lazy_static = { workspace = true }

[dev-dependencies]


[features]
default = ["std"]
std = [
  # Substrate
  "frame-support/std",
  "frame-system/std",
  "sp-io/std",
  "sp-runtime/std",
  "sp-std/std",
  "frame-benchmarking?/std",
  "scale-info/std",
  # Kaioshin
  "kp-starknet/std",
  # Starknet
  "starknet-crypto/std",
  # Other third party dependencies
  "codec/std",
]
runtime-benchmarks = ["frame-benchmarking/runtime-benchmarks"]
try-runtime = ["frame-support/try-runtime"]
