[package]
name = "mc-block-proposer"
version.workspace = true
edition.workspace = true
description = "Starknet block proposer implementation."
authors = [
  "Abdelhamid Bakhta <https://github.com/abdelhamidbakhta>",
  "Substrate DevHub <https://github.com/substrate-developer-hub>",
]
homepage = "https://github.com/keep-starknet-strange/madara"
license = "MIT"
publish = false
repository = "https://github.com/keep-starknet-strange/madara"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
codec = { package = "parity-scale-codec", version = "3.2.2" }
futures = "0.3.29"
futures-timer = "3.0.1"
log = "0.4.20"
prometheus-endpoint = { workspace = true }
sc-block-builder = { workspace = true }
sc-client-api = { workspace = true }
sc-proposer-metrics = { workspace = true }
sc-telemetry = { workspace = true }
sc-transaction-pool-api = { workspace = true }
sp-api = { workspace = true }
sp-blockchain = { workspace = true }
sp-consensus = { workspace = true }
sp-core = { workspace = true }
sp-inherents = { workspace = true }
sp-runtime = { workspace = true }

[dev-dependencies]
parking_lot = { workspace = true }
sc-transaction-pool = { workspace = true }
substrate-test-runtime-client = { workspace = true }
