[package]
name = "mc-commitment-state-diff"
authors.workspace = true
edition.workspace = true
repository.workspace = true
version.workspace = true

[dependencies]
# Substrate
sc-client-api = { workspace = true }
sp-api = { workspace = true }
sp-blockchain = { workspace = true }
sp-runtime = { workspace = true }

# Madara
mc-db = { workspace = true }
mp-digest-log = { workspace = true }
mp-hashers = { workspace = true }
mp-storage = { workspace = true }
pallet-starknet = { workspace = true }
pallet-starknet-runtime-api = { workspace = true }

# Starknet
blockifier = { workspace = true }
starknet_api = { workspace = true }

# Async
futures = { workspace = true }

# Others
indexmap = { workspace = true }
log = { workspace = true }
thiserror = { workspace = true }
