[package]
name = "mc-contract-class-data"
authors.workspace = true
edition.workspace = true
repository.workspace = true
version.workspace = true

[dependencies]
futures = { workspace = true }
log = { workspace = true }
mc-db = { workspace = true }
pallet-starknet-runtime-api = { workspace = true }
sc-transaction-pool-api = { workspace = true }
sp-api = { workspace = true }
sp-runtime = { workspace = true }
starknet_api = { workspace = true }
tokio = { workspace = true }
