[package]
name = "mc-data-availability"
version = "0.1.0"
description = "Starknet data availability."
homepage = "https://github.com/keep-starknet-strange/madara"
edition = "2021"
license = "MIT"
publish = false
repository = "https://github.com/keep-starknet-strange/madara"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
anyhow = { workspace = true }
async-trait = { workspace = true }
futures = "0.3.21"
jsonrpsee = { version = "0.20.0", features = [
  "http-client",
  "ws-client",
  "macros",
] }
log = { workspace = true }
reqwest = { version = "0.11.18", features = ["blocking", "json"] }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror.workspace = true
tokio = { version = "1", features = ["full"] }
url = { workspace = true }
uuid = { version = "1.4.0", features = ["v4", "serde"] }
sp-core = { workspace = true, features = ["std"] }
sp-runtime = { workspace = true, features = ["std"] }
mc-commitment-state-diff = { workspace = true }
mc-db = { workspace = true }
mc-eth-client = { workspace = true }
starknet_api = { workspace = true }

# Ethereum
ethers = { workspace = true }
mp-hashers = { workspace = true }

# Zaun
starknet-core-contract-client = { workspace = true }

# Prometheus
prometheus-endpoint = { workspace = true }

# Optional
avail-subxt = { git = "https://github.com/availproject/avail", version = "0.4.0", tag = "v1.8.0.0", optional = true }
celestia-rpc = { git = "https://github.com/eigerco/lumina", rev = "ccc5b9bfeac632cccd32d35ecb7b7d51d71fbb87", optional = true }
celestia-types = { git = "https://github.com/eigerco/lumina", rev = "ccc5b9bfeac632cccd32d35ecb7b7d51d71fbb87", optional = true }
clap = { workspace = true, features = ["derive"], optional = true }
subxt = { workspace = true, optional = true }

[dev-dependencies]
rstest = { workspace = true }

[features]
clap = ["dep:clap"]
avail = ["dep:avail-subxt", "dep:subxt"]
celestia = ["dep:celestia-rpc", "dep:celestia-types"]
