[package]
name = "mc-db"
version.workspace = true
edition.workspace = true
description = "Starknet database backend"
authors = [
  "Timothée Delabrouille <https://github.com/tdelabro>",
  "Substrate DevHub <https://github.com/substrate-developer-hub>",
]
homepage = "https://github.com/keep-starknet-strange/madara"
license = "MIT"
publish = false
repository = "https://github.com/keep-starknet-strange/madara"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
ethers = "2.0.7"
kvdb-rocksdb = { version = "0.19.0", optional = true }
log = { workspace = true, default-features = true }
parity-db = { version = "0.4.10", optional = true }
sc-client-db = { workspace = true, default-features = true }
scale-codec = { workspace = true, default-features = true, features = [
  "derive",
] }
sp-core = { workspace = true, default-features = true }
sp-database = { workspace = true, default-features = true }
sp-runtime = { workspace = true, default-features = true }
uuid = "1.4.0"

[features]
default = ["kvdb-rocksdb", "parity-db"]
