[package]
name = "mc-deoxys"
version = "0.1.0"
description = "Deoxys crate for Madara"
authors = [
    "Amine Mrad <https://github.com/sparqet>",
    "Antiyro <https://github.com/antiyro>",
]
homepage = "https://github.com/KasarLabs/deoxys"
edition = "2021"
license = "MIT"
publish = false
repository = "https://github.com/KasarLabs/deoxys"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
starknet-gateway = "0.6"
reqwest = "0.11"
serde_json = "1"

blockifier = { workspace = true, default-features = false, features = [
    "testing",
] }
env_logger = "0.9.0"
log = { version = "0.4.14" }
mockito = { workspace = true }
pallet-starknet = { workspace = true }
sp-core = { workspace = true, features = ["std"] }
starknet-core = { workspace = true }
starknet-ff = { workspace = true, default-features = false, features = [
    "alloc",
    "serde",
] }
starknet_api = { workspace = true, default-features = false }
tokio = { workspace = true, features = ["macros", "test-util"] }
# test_utils = { path = "./test_utils", optional = true }
hex = "0.4"
mp-block = { workspace = true }
mp-commitments = { workspace = true }
mp-felt = { workspace = true }
mp-hashers = { workspace = true }
mp-transactions = { workspace = true, features = ["client"] }
validator = { workspace = true, features = ["derive"] }
async-channel = "1"

[dev-dependencies]
# test_utils = { path = "./test_utils" }
