[package]
name = "mc-eth-client"
version = "0.1.0"
description = "Base Ethereum client configuration and instantiation"
homepage = "https://github.com/keep-starknet-strange/madara"
edition = "2021"
license = "MIT"
publish = false
repository = "https://github.com/keep-starknet-strange/madara"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
ethers = { workspace = true }
rustc-hex = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
url = { workspace = true }
reqwest = { workspace = true }
k256 = { version = "0.13", default-features = false, features = ["ecdsa"] }
alloy = { git = "https://github.com/alloy-rs/alloy", rev = "fd8f065", features = [
    # "dyn-abi",
    # "json-abi",
    # "json",
    # "sol-types",
    # "rlp",
    # "serde",
    # "contract",
    # "consensus",
    # "eips",
    "network",
    # "genesis",
    # "node-bindings",
    "providers",
    "rpc",
    # "json-rpc",
    "rpc-client",
    # "rpc-types",
    # "rpc-types-eth",
    # "rpc-types-engine",
    # "rpc-types-trace",
    "signers",
    # "signer-aws",
    # "signer-gcp",
    # "signer-ledger",
    # "signer-trezor",
    "signer-wallet",
    "signer-mnemonic",
    # "signer-yubihsm",
    # "transports",
    "transport-http",
    # "transport-ipc",
    # "transport-ws",
    # "pubsub",
] }
