[package]
name = "mc-genesis-data-provider"
authors.workspace = true
edition.workspace = true
repository.workspace = true
version.workspace = true

[dependencies]
anyhow = { workspace = true }
jsonrpsee = { workspace = true }
log = { workspace = true }
mp-genesis-config = { workspace = true }
pallet-starknet = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
