[package]
name = "mc-l1-messages"
version = "0.1.0"
description = "L1 Messages processing library."
homepage = "https://github.com/keep-starknet-strange/madara"
edition = "2021"
license = "MIT"
publish = false
repository = "https://github.com/keep-starknet-strange/madara"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
log = { workspace = true }
rustc-hex = "2.1.0"
url = "2.5.0"

# Madara RuntimeApi
pallet-starknet-runtime-api = { workspace = true, default-features = true }

# Starknet dependencies
starknet_api = { workspace = true, default-features = true }

# Starknet
mc-db = { workspace = true, default-features = true }
mc-eth-client = { workspace = true }

# Madara Primitives
mp-felt = { workspace = true, default-features = true }
mp-transactions = { workspace = true, default-features = true }

# Substrate Primitives
sp-api = { workspace = true, default-features = true }
sp-core = { workspace = true, default-features = true }
sp-runtime = { workspace = true, default-features = true }

# Substrate client dependencies
sc-client-api = { workspace = true, default-features = true }
sc-transaction-pool-api = { workspace = true, default-features = true }

# Zaun
starknet-core-contract-client = { workspace = true }

# Other third party dependencies
ethers = { workspace = true }
serde = { workspace = true, default-features = true }
serde_json = { workspace = true, default-features = true }
thiserror = { workspace = true }
